--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-07-18 01:46:17
+lastsearch = 2024-07-18 02:28:10
 
 [hanvico.net.vn]
 match = -42.1%%
@@ -13,8 +13,8 @@ url = https://hanvico.net.vn/products/ruot-goi-long-vu-cao-cap-30x50
 
 [demvip.vn]
 match = 10.5%%
-title = Ruột gối lông vũ cao cấp 45*65
-url = https://demvip.vn/products/ruot-goi-long-vu-cao-cap-1
+title = Ruột gối lông vũ cao cấp 50*70
+url = https://demvip.vn/products/ruot-goi-long-vu-cao-cap-50-70
 
 [antbedding.com]
 match = 78.9%%
@@ -105,4 +105,9 @@ url = https://youngricedrap.com/san-pham/ruot-goi-nam-long-vu-nhan-tao
 match = -115.8%%
 title = Ruột gối đôi nằm ôm Gòn Lông Vũ Nhân Tạo cao cấp BETTY ...
 url = https://bettybedding.vn/ruot-goi-doi-nam-om-gon-long-vu-nhan-tao-cao-cap-betty-chuan-khach-san-5-sao-kich-thuoc-50x140cm
+
+[pisbedding.com]
+match = 10.5%%
+title = Ruột Gối Ngủ Lông Vũ Cao Cấp - Pis
+url = https://pisbedding.com/san-pham/ruot-goi-ngu-long-vu-cao-cap/
 
