--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-18 00:30:27
+lastsearch = 2024-07-18 02:32:08
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Riot is cutting back budget on esports?
 url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -21.4%%
+title = 12.12: The Day
+url = https://en.wikipedia.org/wiki/12.12:_The_Day
 
 [www.facebook.com]
 match = -160.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -100.0%%
-title = A Ceo Fakes Being A Ceo Eepisode 100 Full Episode
-url = https://www.tiktok.com/discover/a-ceo-fakes-being-a-ceo-eepisode-100-full-episode
+match = -160.0%%
+title = I went through a series of emotions but 10/10 wow 🤤 @Fruit ...
+url = https://www.tiktok.com/@tatlafata/video/7356429796424895790
 
 [www.imdb.com]
 match = 0.0%%
