--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-18 02:10:21
+lastsearch = 2024-07-18 02:26:42
 
 [www.instagram.com]
-match = -169.2%%
-title = Embarking on a new journey, @Dior is set ...
-url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
+match = -376.9%%
+title = som1aej 🌌🎉 AEJ Team宠粉福利Giveaway! 🎉🌌 我们将送出 ...
+url = https://www.instagram.com/chan.h.yee.98/p/C21XGIDJZVE/
 
 [hk.linkedin.com]
-match = -76.9%%
-title = Fanny Chan - Christian Dior Couture
-url = https://hk.linkedin.com/in/fanny-chan-938952bb
+match = -100.0%%
+title = Hoi Yee Ng - Christian Dior Couture
+url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
 match = -238.5%%
@@ -295,4 +295,9 @@ url = https://www.universityoffashion.com/blog/dressed-to-inspire-a-tribute-to-f
 match = -130.8%%
 title = Thu hồi chì kẻ chân mày và 2 nước hoa Dior
 url = https://dantri.com.vn/suc-khoe/thu-hoi-chi-ke-chan-may-va-2-nuoc-hoa-dior-20180326065227985.htm
+
+[www.carousell.sg]
+match = -176.9%%
+title = Hoi Yi Chan's Reviews on Carousell Hong Kong
+url = https://www.carousell.sg/u/justforu.shop/reviews/
 
