--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-07-17 23:39:38
+lastsearch = 2024-07-18 02:32:28
 
 [demdreamland.vn]
 match = 29.7%%
@@ -12,9 +12,9 @@ title = Đệm Dreamland Chính Hãng Giá Tốt Nhất
 url = https://demdreamland.vn/
 
 [demxanh.com]
-match = 18.6%%
-title = Đệm cao su Kim Cương xuất khẩu PRINCESS GOLD áo gấm
-url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-gold.html
+match = 16.3%%
+title = Đệm cao su Kim Cương xuất khẩu PRINCESS MASSAGE ...
+url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-massage.html
 
 [www.diepxuan.com]
 match = -277.8%%
