--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-07-18 01:45:23
+lastsearch = 2024-07-18 02:27:59
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = tin tức - Trẻ dưới 10 tuổi không được ngồi ghế trướ
 url = https://voz.vn/t/tre-duoi-10-tuoi-khong-duoc-ngoi-ghe-truoc-o-to.805464/page-5
 
 [www.tiktok.com]
-match = -240.0%%
-title = Tui thấy cái đoạn nó chỉ uống sữa là nuôi nhàn nhất ấy! ...
-url = https://www.tiktok.com/@uttwins/video/7388515743945575688
+match = -173.3%%
+title = Quả Thốt Nốt tươi, Có cách nào khác để ăn loại ...
+url = https://www.tiktok.com/@maitaybac/video/7256070238796614918
 
 [www.reddit.com]
 match = -33.3%%
