--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-18 01:21:12
+lastsearch = 2024-07-18 02:49:05
 
 [demxanh.com]
 match = -42.9%%
@@ -149,7 +149,7 @@ url = https://www.kvaser.cn/en/external-link/?url=https://detsad147vrn.ru/m7kv6o
 [www.staleyfarmshomeskc.com]
 match = -92.9%%
 title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
-url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--80afptqn.xn--p1ai/5392784wwwsp47euorgc4fe43y
+url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
 match = -7.1%%
