--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-18 02:26:18
+lastsearch = 2024-07-18 02:45:45
 
 [www.mantubung.com]
-match = -138.9%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -100.0%%
+title = Màn trẻ em tự bung chống muỗi đa năng 80cm * 100cm
+url = https://www.mantubung.com/man-tre-em-tu-bung-chong-muoi-da-nang-84845.html
 
 [manbinhminh.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -100.0%%
-title = Màn chụp tự bung cho bé ⚡LOẠI 1⚡ Mùng chụp ngủ tự ...
-url = https://shopee.vn/Màn-chụp-tự-bung-cho-bé-⚡LOẠI-1⚡-Mùng-chụp-ngủ-tự-bung-xếp-chống-muỗi-cho-bé-nhỏ-lớn-trẻ-em-sơ-sinh-i.236260085.10218972280
+match = -122.2%%
+title = Mùng chụp tự bung cho bé - màn chụp chống muỗi cho ...
+url = https://shopee.vn/Mùng-chụp-tự-bung-cho-bé-màn-chụp-chống-muỗi-cho-bé-trẻ-em-sơ-sinh-kiểu-xếp-gấp-gọn-tiện-dụng-i.236260085.13801083908
 
 [h5.lazada.vn]
 match = -33.3%%
