CI images update

--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-17 22:37:36
+lastsearch = 2024-07-18 03:19:24
 
 [www.facebook.com]
 match = -141.2%%
@@ -149,7 +149,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 [books.google.com]
 match = -194.1%%
 title = Actinobacteria: Prolific Producers of Bioactive Metabolites
-url = https://books.google.com/books?id=R6YEEAAAQBAJ&pg=PA60&lpg=PA60&dq=chan+4+kg+mao+tan&source=bl&ots=V9Hg3TPfiq&sig=ACfU3U3NBBs3fT0dUuAe4IKpE_7N7ORJwA&hl=en&sa=X&ved=2ahUKEwi7r4jUjq2HAxVJhYkEHUV7CXcQ6AF6BAgoEAM
+url = https://books.google.com/books?id=R6YEEAAAQBAJ&pg=PA60&lpg=PA60&dq=chan+4+kg+mao+tan&source=bl&ots=V9Hg4PQhom&sig=ACfU3U1xaf7X4zQQr0quimO92q_HuYGWcQ&hl=en&sa=X&ved=2ahUKEwiGjIXt8q6HAxUdle4BHaoVC7QQ6AF6BAgiEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
