--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-18 02:45:34
+lastsearch = 2024-07-18 03:21:02
 
 [hk.linkedin.com]
-match = 0.0%%
-title = Coco Chan - Hoi Lai Kok
-url = https://hk.linkedin.com/in/coco-chan-935486254
+match = -123.1%%
+title = Chan cocoo - Freelance (Self employed)
+url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
 match = -23.1%%
@@ -155,4 +155,9 @@ url = https://openaccess.thecvf.com/content/CVPR2023/papers/Yin_1_VS_100_Paramet
 match = -261.5%%
 title = HKU Business School teams won the 1st runner-up in ...
 url = https://www.hkubs.hku.hk/media/school-news/hku-business-school-teams-won-the-1st-runner-up-in-hkicpa-business-case-competition-2021/
+
+[www.ageing.hku.hk]
+match = -200.0%%
+title = People | SPCOA - Sau Po Centre on Ageing - HKU
+url = https://www.ageing.hku.hk/people
 
