--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-18 01:21:47
+lastsearch = 2024-07-18 03:15:56
 
 [us.misumi-ec.com]
 match = -325.0%%
@@ -87,9 +87,9 @@ title = Collective Bargaining Agreement
 url = https://www.usf.edu/hr/documents/employment-resources/employee-labor-relations/cba-2022-2025-usf-bot-and-gau.pdf
 
 [www.instagram.com]
-match = -358.3%%
-title = TEDxBerkeley | Meet the longtime print journalist for The ...
-url = https://www.instagram.com/tedxberkeley/reel/Clr0AwJvNrJ/
+match = -100.0%%
+title = Cornell KASA (@cornellkasa)
+url = https://www.instagram.com/cornellkasa/?hl=en
 
 [www.billheadfuneralhome.com]
 match = -250.0%%
