--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-18 02:31:56
+lastsearch = 2024-07-18 03:18:18
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,14 +12,14 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -61.1%%
-title = NEM Fashion - ÁO KHOÁC LÔNG VŨ SIÊU NHẸ
-url = https://www.facebook.com/nemfashion.official/posts/áo-khoác-lông-vũsiêu-nhẹ-siêu-ấm-chỉ-từ-𝟏𝟏𝟗𝟗𝐊-với-xu-thế-phát-triển-của-thời-tra/1942429895894902/
+match = -127.8%%
+title = Khay cuốn nem siêu tốc | KHAY CUỐN SIÊU TỐC | CUỐN ...
+url = https://www.facebook.com/ngoinhachichbong/videos/khay-cuốn-nem-siêu-tốc/1791938007504711/
 
 [thegioinem.com]
-match = -155.6%%
-title = Nệm cao su nhân tạo và nệm cao su tổng hợp khác nhau ở ...
-url = https://thegioinem.com/nem-cao-su-nhan-tao-va-cao-su-tong-hop-khac-nhau-o-diem-nao.html
+match = 23.5%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [garan.vn]
 match = -166.7%%
