--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-18 02:25:46
+lastsearch = 2024-07-18 03:21:34
 
 [www.walmart.com]
 match = -162.5%%
@@ -152,9 +152,9 @@ title = Personal Color🖍️ | Bộ sưu tập do Annie🥦 đăng
 url = https://www.lemon8-app.com/an_nie/7208139846819316225?region=vn
 
 [globalmaxhosting.com]
-match = -212.5%%
-title = multiple return in python - bolsa pequena da louis vuitton
-url = https://globalmaxhosting.com/blogs/tyonogkq-277//
+match = -218.8%%
+title = uk company employing staff overseas - globalmaxhosting.com
+url = https://globalmaxhosting.com/blogs/ekeaaxcl-76/
 
 [m.aquaserviecuador.com]
 match = -125.0%%
