--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-17 16:44:00
+lastsearch = 2024-07-18 03:28:24
 
 [everonvn.com.vn]
-match = -74.1%%
-title = Ep1639, Bảng giá bộ chăn ga gối Everon Hàn Quốc, Ep 1639
-url = https://everonvn.com.vn/everon/462/everon-ep1639
+match = 7.4%%
+title = Bộ Artemis Tk Giảm Giá - Everon
+url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia
 
 [everon.com.vn]
 match = 40.0%%
@@ -18,8 +18,8 @@ url = https://everon.com.vn/epm-19064/
 
 [demxanh.com]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPM19064
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19064.html
+title = Bộ chăn ga gối EVeron EPM19068
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
 
 [shopee.vn]
 match = -48.1%%
@@ -33,8 +33,8 @@ url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [sieuthidemhanquoc.com.vn]
 match = 14.8%%
-title = Bộ chăn ga gối Everon ESM-19015
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-19015-1484
+title = Bộ chăn ga gối Everon ESM-19016
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-19016-1485
 
 [everonvietnam.com]
 match = 36.0%%
