--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-17 22:18:22
+lastsearch = 2024-07-18 03:28:57
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -77,9 +77,9 @@ title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
 url = https://noithatcaco.vn/collections/giuong-ngu
 
 [www.quiphuc.com]
-match = 25.0%%
-title = Giường - Ghế du lịch
-url = https://www.quiphuc.com/collections/giuong-ghe-du-lich
+match = 0.0%%
+title = Giường - Sản phẩm mùa hè
+url = https://www.quiphuc.com/collections/giuong-san-pham-mua-he
 
 [sumika.vn]
 match = -140.0%%
