CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-18 01:51:53
+lastsearch = 2024-07-18 03:52:15
 
 [www.tiktok.com]
 match = -41.2%%
@@ -47,9 +47,9 @@ title = Anxiety and Depression Association of America, ADAA ...
 url = https://adaa.org/
 
 [mpdc.dc.gov]
-match = -150.0%%
-title = | mpdc
-url = https://mpdc.dc.gov/
+match = 0.0%%
+title = 
+url = https://mpdc.dc.gov/page/police-districts-and-police-service-areas
 
 [steamcommunity.com]
 match = -135.3%%
@@ -480,4 +480,9 @@ url = https://www.epa.gov/home
 match = -47.1%%
 title = U.S. Department of State – Home
 url = https://www.state.gov/
+
+[docmgmt.miamibeachfl.gov]
+match = -123.5%%
+title = GENERAL OBLIGATION BOND OVERSIGHT COMMITTEE ...
+url = https://docmgmt.miamibeachfl.gov/WebLink/edoc/228700/Agenda 2008-10-06.pdf?dbid=0&repo=CityClerk
 
