--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-17 23:15:56
+lastsearch = 2024-07-18 03:44:43
 
 [shopee.vn]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa có gối 15
 url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 
 [demxanh.com]
-match = 16.7%%
-title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
+match = 29.2%%
+title = Chiếu điều hòa mây viền lụa loại đẹp
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [goni.vn]
 match = 4.2%%
