--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-18 02:09:40
+lastsearch = 2024-07-18 03:47:18
 
 [shopee.vn]
-match = -25.0%%
-title = Chiếu điều hòa 1m6; 1m8, 2m2 -Drap beding - mẫu4
-url = https://shopee.vn/Chiếu-điều-hòa-1m6-1m8-2m2-Drap-beding-mẫu4-i.18452594.18826561791
+match = 0.0%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,14 +17,14 @@ title = Chiếu điều hòa có gối 16
 url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 
 [goni.vn]
-match = -50.0%%
-title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
-url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
+match = 4.2%%
+title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
+url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = -4.2%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = -25.0%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -52,9 +52,9 @@ title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào 
 url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [www.lazada.vn]
-match = -70.8%%
-title = Bộ Chiếu Điều Hòa Kèm Gối Cho Bé Yêu, Chất Liệu Sợi Lụa Độ ...
-url = https://www.lazada.vn/products/bo-chieu-dieu-hoa-kem-goi-cho-be-yeu-chat-lieu-soi-lua-do-mem-deo-cao-mau-sac-thanh-nha-san-pham-co-kha-nang-khang-khuan-an-toan-i281832944.html
+match = 8.3%%
+title = Chiếu Mây Điều Hòa Chiếu mát mùa hè. ...
+url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-mat-mua-he-chieu-dieu-hoa-16x-2m-loai-tot-thoang-khi-mat-ruoi-ben-dep-co-the-gap-gon-giup-ban-tan-huong-nhung-giay-phut-thu-gian-i517380866.html
 
 [ababy.com.vn]
 match = -4.2%%
