--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-18 03:30:03
+lastsearch = 2024-07-18 03:45:42
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
-match = -161.9%%
-title = 20240411 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
-url = https://www.youtube.com/watch?v=GfgBMe1fFZM
+match = -85.7%%
+title = Miền Bắc chiều và đêm nay còn mưa lớn cục bộ | VTVWDB
+url = https://www.youtube.com/watch?v=9CsOVMaSlyo
 
 [roc-taiwan.org]
 match = -66.7%%
@@ -22,9 +22,9 @@ title = THỦ TỤC LÀM HỘ CHIẾU ĐÀI LOAN VÀ VISA NHẬP CẢN...
 url = https://roc-taiwan.org/vnsgn_en/post/79.html
 
 [shopee.vn]
-match = -42.9%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -57.1%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [www.taiwanembassy.org]
 match = -19.0%%
@@ -77,14 +77,14 @@ title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất ...
 url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [visana.vn]
-match = -114.3%%
-title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VISANA
-url = https://visana.vn/visa-dai-loan/
+match = -119.0%%
+title = Tất tần tật những điều cần biết về visa Quan Hồng Đài Loan
+url = https://visana.vn/visa-quan-hong-dai-loan/
 
 [www.tiktok.com]
-match = -9.5%%
-title = Phim Mai Có Chiếu Ở Taiwan Không
-url = https://www.tiktok.com/discover/phim-mai-có-chiếu-ở-taiwan-không?lang=en
+match = -19.0%%
+title = Cách Xem Lịch Chiếu Film Tại Taiwan
+url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
 
 [www.travel.taipei]
 match = 19.0%%
