--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-18 02:16:12
+lastsearch = 2024-07-18 03:45:08
 
 [shopee.vn]
 match = 25.0%%
@@ -97,9 +97,9 @@ title = Hệ thống kinh lạc trong cơ thể
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/he-thong-kinh-lac-trong-co/
 
 [books.google.com]
-match = -225.0%%
-title = Vǎn bia, Quốc tử giám Hà Nội - Page 612 - Google Books Result
-url = https://books.google.com/books?id=nPZvAAAAMAAJ&pg=PA612&lpg=PA612&dq=chieu+lac+soc+12&source=bl&ots=HJsQyl83pY&sig=ACfU3U29q1ypTZL2bQ38aev-LTUwcskIUg&hl=en&sa=X&ved=2ahUKEwiu6oTd5K6HAxXig4kEHfWYApkQ6AF6BAgdEAM
+match = -231.2%%
+title = 12 Con Giáp Theo Lịch Vạn Niên - Page 182 - Google Books Result
+url = https://books.google.com/books?id=uEr8EAAAQBAJ&pg=PA182&lpg=PA182&dq=chieu+lac+soc+12&source=bl&ots=83sA8jUTRw&sig=ACfU3U1wTW5mlyJLD7mLzJaDSVGIGo8DEQ&hl=en&sa=X&ved=2ahUKEwjH6tfN-K6HAxUNHjQIHXRZBzIQ6AF6BAgnEAM
 
 [baovinhlong.vn]
 match = -137.5%%
