--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-18 03:35:58
+lastsearch = 2024-07-18 03:49:33
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -158,8 +158,8 @@ url = https://www.vulture.com/2021/03/kimbra-interview-gotye-somebody-that-i-use
 
 [aemo.com.au]
 match = -114.3%%
-title = Record Demand in South Australia & Victoria 28 to 31 ...
-url = https://aemo.com.au/-/media/files/electricity/nem/market_notices_and_events/market_event_reports/archive/180-0091-pdf.pdf
+title = NEM Reform Electricity Wholesale Consultative Forum ( ...
+url = https://aemo.com.au/-/media/files/stakeholder_consultation/working_groups/other_meetings/electricity-wholesale-consultative-forum/meeting-16-presentation.pdf?la=en
 
 [www.nitrc.org]
 match = -21.4%%
@@ -198,8 +198,8 @@ url = https://cms3.revize.com/revize/sancarlos/Q&A reduced.pdf
 
 [www.yelp.com]
 match = -28.6%%
-title = Quán Nem Ninh Hòa - Restaurant Reviews
-url = https://www.yelp.com/biz/quán-nem-ninh-hòa-elk-grove-2
+title = Quan Nem Ninh Hoa - Restaurant Reviews
+url = https://www.yelp.com/biz/quan-nem-ninh-hoa-sacramento
 
 [blog.nem.ec]
 match = -14.3%%
