--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-07-17 19:58:26
+lastsearch = 2024-07-18 03:47:50
 
 [www.diepxuan.com]
 match = 40.6%%
@@ -42,9 +42,9 @@ title = DreamFoam Essential Mattress Review - The Most Affordable ...
 url = https://www.youtube.com/watch?v=HW7qiZ4xfow
 
 [forum.mattressunderground.com]
-match = -28.1%%
-title = dreamfoam 13" gel?? - General Mattresses Questions
-url = https://forum.mattressunderground.com/t/dreamfoam-13-gel/6456
+match = -12.5%%
+title = Ultimate Dreams 13" Gel Memory Foam Mattress
+url = https://forum.mattressunderground.com/t/ultimate-dreams-13-gel-memory-foam-mattress-first-impressions/1121?page=4
 
 [www.home-barista.com]
 match = -6.2%%
