CI images update

--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-17 20:36:14
+lastsearch = 2024-07-18 04:32:31
 
 [en.wikipedia.org]
-match = -15.4%%
-title = Takeru Segawa
-url = https://en.wikipedia.org/wiki/Takeru_Segawa
+match = -16.7%%
+title = Kikuko Inoue
+url = https://en.wikipedia.org/wiki/Kikuko_Inoue
 
 [kpop.fandom.com]
 match = -47.1%%
@@ -17,9 +17,9 @@ title = Yechan (xikers) - Kpop Wiki - Fandom
 url = https://kpop.fandom.com/wiki/Yechan_(xikers)
 
 [kprofiles.com]
-match = -76.5%%
-title = xikers Members Profile (Updated!)
-url = https://kprofiles.com/xikers-members-profile/
+match = -200.0%%
+title = KQ FELLAZ (KQ Entertainment Official Trainees) (Updated!)
+url = https://kprofiles.com/kq-fellaz-kq-entertainment-official-trainees/
 
 [www.qsc.com]
 match = -188.2%%
@@ -28,8 +28,8 @@ url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/porta
 
 [www.ncbi.nlm.nih.gov]
 match = -176.5%%
-title = Malaysian Society of Gastroenterology and Hepatology ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9303255/
+title = Mechanosensitive Channel PIEZO1 Senses Shear Force to ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 
 [books.google.com]
 match = -11.8%%
