--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-18 04:14:12
+lastsearch = 2024-07-18 04:26:51
 
 [www.lazada.vn]
 match = -60.9%%
@@ -37,9 +37,9 @@ title = sản xuất chiếu nhựa
 url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
 
 [m.facebook.com]
-match = 4.3%%
-title = Xưởng chiếu nhựa Thái bình 2023 | Thai Binh
-url = https://m.facebook.com/CHIEUNHUAHATRANG/
+match = -69.6%%
+title = Tổng kho chiếu nhựa - sỉ lẻ chiếu nhựa Thái Bình | Thai Binh
+url = https://m.facebook.com/61552781727977/
 
 [sangothaibinh.com]
 match = 47.8%%
