--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-18 02:48:45
+lastsearch = 2024-07-18 04:35:22
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -111.8%%
-title = Fake HOA pretending they're real. : r/fuckHOA
-url = https://www.reddit.com/r/fuckHOA/comments/mnky3q/fake_hoa_pretending_theyre_real/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
 match = -194.1%%
@@ -99,7 +99,7 @@ url = https://en.wikipedia.org/wiki/Homeowner_association
 [www.doorloop.com]
 match = 0.0%%
 title = 
-url = https://www.doorloop.com/laws/illinois-hoa-laws
+url = https://www.doorloop.com/laws/arizona-hoa-laws
 
 [www.newhomesource.com]
 match = 0.0%%
