--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-17 23:19:18
+lastsearch = 2024-07-18 04:35:09
 
 [eva.vn]
 match = -131.6%%
@@ -22,9 +22,9 @@ title = cây hoa mộc giá tốt Tháng 6, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=cây hoa mộc
 
 [mocnhienfarm.com]
-match = -7.7%%
-title = Cây pháo bông
-url = https://mocnhienfarm.com/products/cay-phao-bong
+match = 21.1%%
+title = Hoa chiều tím hồng cao C1
+url = https://mocnhienfarm.com/products/hoa-chieu-tim
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
@@ -67,9 +67,9 @@ title = Cây cảnh như máy hút khói, khử mùi, trồng trong nhà ...
 url = https://danviet.vn/cay-canh-nhu-may-hut-khoi-khu-mui-trong-trong-nha-khong-khi-sach-bong-con-chieu-may-ruoc-loc-20240704031213471.htm
 
 [www.vinmec.com]
-match = -21.1%%
-title = Cây bóng nước có tác dụng gì?
-url = https://www.vinmec.com/vi/y-hoc-co-truyen/duoc-lieu/cay-bong-nuoc-co-tac-dung-gi/
+match = -15.8%%
+title = Cây dành dành có tác dụng gì?
+url = https://www.vinmec.com/vi/y-hoc-co-truyen/duoc-lieu/cay-danh-danh-co-tac-dung-gi/
 
 [www.youtube.com]
 match = -142.9%%
