CI images update

--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-18 04:27:35
+lastsearch = 2024-07-18 04:46:23
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -190,4 +190,9 @@ url = https://cairang.cantho.gov.vn/wps/wcm/connect/cairang/4fb2eb95-1829-4111-9
 match = -41.7%%
 title = Điểm chuẩn cao nhất ĐH Bách khoa TP.HCM là 19,5
 url = https://znews.vn/diem-chuan-cao-nhat-dh-bach-khoa-tphcm-la-19-5-post263746.html
+
+[www.minhngoc.net.vn]
+match = -79.2%%
+title = Xổ số Minh Ngọc™ Kết Quả Xổ Số Trực Tiếp NHANH NHẤT
+url = https://www.minhngoc.net.vn/
 
