--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-18 03:50:43
+lastsearch = 2024-07-18 04:52:16
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Riot is cutting back budget on esports?
 url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
-match = -21.4%%
-title = 12.12: The Day
-url = https://en.wikipedia.org/wiki/12.12:_The_Day
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -160.0%%
@@ -109,7 +109,7 @@ url = https://cryptonews.com/news/bitcoin-miner-terawulf-clears-debt-plans-opera
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=931695de79b1f518&q=Did+Nam+Joo+Hyuk+go+to+college?&sa=X&ved=2ahUKEwi1s6ft-a6HAxVbHkQIHQL6B_8QsZYEegQIVhAC
+url = https://www.google.com/search?sca_esv=9980f8d855368397&q=Did+Nam+Joo+Hyuk+go+to+college?&sa=X&ved=2ahUKEwjTuqvOh6-HAxWfD1kFHY5XDx0QsZYEegQISRAC
 
 [files.eric.ed.gov]
 match = -115.0%%
