--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-18 01:40:03
+lastsearch = 2024-07-18 04:44:14
 
 [shopee.vn]
-match = -17.2%%
-title = Chiếu nhựa thái hàng loại1 1,6m×2m 1,8×2m 2m×3m 2m × ...
-url = https://shopee.vn/Chiếu-nhựa-thái-hàng-loại1-1-6m×2m-1-8×2m-2m×3m-2m-×4m-i.422461343.3989921731
+match = -13.8%%
+title = Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ 2m ...
+url = https://shopee.vn/Chiếu-nhựa-thái-lan-ăn-cơm-điều-hoà-gấp-gọn-đủ-cỡ-2m-3m-4m-i.13406575.655918786
 
 [www.maihuyencorp.com]
 match = 13.8%%
@@ -27,9 +27,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.facebook.com]
-match = 26.3%%
-title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
+match = 31.0%%
+title = Chiếu Cói Thái Bình Rẻ Nhất Hà Nội
+url = https://www.facebook.com/chieucoithaibinhrenhathanoi/
 
 [www.sendo.vn]
 match = 24.1%%
