--- a/images/chieu-truc-den-khong-vien-lson-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 lastopen = 2024-06-07 00:19:36
 
 [search]
-lastsearch = 2024-07-18 00:12:19
+lastsearch = 2024-07-18 04:46:03
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đen không viền lson 18
 url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 
 [chieutrelinhchi.com]
-match = 21.2%%
-title = Chiếu trúc hạt nhỏ không viền màu nâu đen Size: 1m8x2m
-url = https://chieutrelinhchi.com/chieu-truc-1m8/chieu-truc-hat-nho-khong-vien-mau-nau-1m8x2m-101.html
+match = 24.2%%
+title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1m6x1m9
+url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-khong-vien-mau-vang-1m6x1m9-91.html
 
 [demxanh.com]
 match = -9.1%%
@@ -27,9 +27,9 @@ title = Chiếu Trúc Cao Cấp Hạt Đen Không Viền
 url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
 
 [chieutrelanlan.com]
-match = 24.2%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 180x200cm (1m8)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-mau-den-loai-khong-vien-180x200cm-26.html
+match = 21.2%%
+title = Chiếu trúc mắt nhỏ có viền màu đen 180x200cm (1m8)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-180x200cm-32.html
 
 [tiki.vn]
 match = 18.2%%
@@ -42,9 +42,9 @@ title = CHIẾU TRÚC 1M8 HẠT VÀNG KHÔNG VIỀN TPHCM
 url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-1m8-hat-vang-khong-vien-tphcm-80.html
 
 [shopee.vn]
-match = -15.2%%
-title = Chiếu trúc cao bằng - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/cao bằng
+match = -3.0%%
+title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/1m2
 
 [vongxepsaigon.vn]
 match = 27.3%%
@@ -145,4 +145,9 @@ url = https://chieutrucchieutre.ete.vn/2024/04/chieu-truc-hat-1m8-hat-nau-bong-k
 match = 22.2%%
 title = Chiếu Hương Trúc | Lang Son
 url = https://www.facebook.com/chieuhuongtrucls/?locale=vi_VN
+
+[www.lazada.vn]
+match = 3.0%%
+title = Chiếu trúc hạt có viền không viền đẹp cao cấp cho giường ...
+url = https://www.lazada.vn/products/chieu-truc-hat-co-vien-khong-vien-dep-cao-cap-cho-giuong-don-1m-1m2-1m4-1m6-1m8-x-2m-gia-re-i1523523975.html
 
