--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-18 01:37:32
+lastsearch = 2024-07-18 04:50:29
 
 [www.lazada.vn]
 match = -94.4%%
@@ -22,9 +22,9 @@ title = Thùy Ngân (@huuloc861) • Instagram photos and videos
 url = https://www.instagram.com/huuloc861/
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -83.3%%
-title = Chợ Đông Ba - Nam Cali | Westminster CA
-url = https://www.facebook.com/quanohon/
+match = -150.0%%
+title = Siêu Thị Nệm - 267 Phan Đình Phùng, P15, Phú Nhuận, ...
+url = https://www.facebook.com/sieuthinem267/
 
 [voz.vn]
 match = 11.1%%
@@ -82,9 +82,9 @@ title = NEM NƯỚNG | Fast Food
 url = https://www.ministop.vn/en/product/detail?id=934
 
 [www.youtube.com]
-match = -172.2%%
-title = Bí quyết BÁNH RÁN LÚC LẮC, BÁNH CAM Vỏ giòn lâu không ...
-url = https://www.youtube.com/watch?v=bH6ztxrMr3E
+match = -155.6%%
+title = Tipps and Tricks - How to make CHA GIO - Authentic ...
+url = https://www.youtube.com/watch?v=YdTLFfXiGMk
 
 [www.tiktok.com]
 match = -105.6%%
