--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-18 04:13:26
+lastsearch = 2024-07-18 05:51:33
 
 [www.facebook.com]
 match = -141.2%%
@@ -147,9 +147,9 @@ title = Seeing the unseen of Chinese herbal medicine processing ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
-match = -194.1%%
-title = Actinobacteria: Prolific Producers of Bioactive Metabolites
-url = https://books.google.com/books?id=R6YEEAAAQBAJ&pg=PA60&lpg=PA60&dq=chan+4+kg+mao+tan&source=bl&ots=V9Hg4PQhom&sig=ACfU3U1xaf7X4zQQr0quimO92q_HuYGWcQ&hl=en&sa=X&ved=2ahUKEwiGjIXt8q6HAxUdle4BHaoVC7QQ6AF6BAgiEAM
+match = -7.7%%
+title = Index Medicus
+url = https://books.google.com/books?id=NWRDNsmrI_IC&pg=PA4034&lpg=PA4034&dq=chan+4+kg+mao+tan&source=bl&ots=n2SqeiWztE&sig=ACfU3U11cc_igkxQWN7Y2h4o-CwkmMeILA&hl=en&sa=X&ved=2ahUKEwie2KbulK-HAxVfFVkFHcDxCBgQ6AF6BAgiEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
