--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-18 01:36:23
+lastsearch = 2024-07-18 05:52:27
 
 [www.youtube.com]
 match = -147.4%%
@@ -197,9 +197,9 @@ title = Chiếu cây mộc hoa 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-moc-hoa-180x200.html
 
 [baobinhphuoc.com.vn]
-match = -31.6%%
-title = Mùa mưa về Đồng Tháp Mười hái sen
-url = https://baobinhphuoc.com.vn/news/19/159717/mua-mua-ve-dong-thap-muoi-hai-sen
+match = -163.2%%
+title = Khai mạc Triển lãm Hiệp định Geneva về đình chỉ chiến sự ...
+url = https://baobinhphuoc.com.vn/news/19/160078/khai-mac-trien-lam-hiep-dinh-geneva-ve-dinh-chi-chien-su-o-viet-nam
 
 [zingtruyen.top]
 match = 21.1%%
