--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-17 22:36:34
+lastsearch = 2024-07-18 05:50:16
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = TIN TÔN GIÁO, CHIỀU THỨ HAI 15/07/2024
 url = https://www.youtube.com/watch?v=CW1lWW6yhOQ
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHabAP2kBc&sig=ACfU3U3UzymYR0VNxOViZjZncMwMAT81GQ&hl=en&sa=X&ved=2ahUKEwi33cHRs66HAxXcFFkFHbHwDyoQ6AF6BAgcEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=vqdQAQAAIAAJ&pg=RA2-PA56&lpg=RA2-PA56&dq=chieu+lac+soc+16&source=bl&ots=KcLrI2zS0c&sig=ACfU3U1a1nETHHQySsk1gZMta1TSwlnAng&hl=en&sa=X&ved=2ahUKEwiburnJlK-HAxXYMlkFHTq5C7YQ6AF6BAglEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
@@ -490,4 +490,9 @@ url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-
 match = -118.8%%
 title = Thị trường rung lắc, đảo chiều phút cuối phiên
 url = https://nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuoi-phien-3359333/
+
+[m.nhipcaudautu.vn]
+match = -118.8%%
+title = Thị trường rung lắc, đảo chiều phút cuối phiên
+url = https://m.nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuoi-phien-3359333/
 
