CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-18 02:09:49
+lastsearch = 2024-07-18 06:13:32
 
 [scholar.google.com]
 match = -43.8%%
@@ -119,7 +119,7 @@ url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 [books.google.com]
 match = -218.8%%
 title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+18&source=bl&ots=LZu6STbAZf&sig=ACfU3U2h3eoxLZGXNHnPKnabl07yBAJx4A&hl=en&sa=X&ved=2ahUKEwiLztCm466HAxVnq4kEHcM9CokQ6AF6BAgeEAM
+url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+18&source=bl&ots=LZu6SUgxRh&sig=ACfU3U3BKYhnecPKOmy3PIzRiA0PgqlZqg&hl=en&sa=X&ved=2ahUKEwi5rKnjma-HAxU3v4kEHYtcCs4Q6AF6BAgaEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
