--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-18 04:50:50
+lastsearch = 2024-07-18 06:13:43
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
 url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
 
 [demxanh.com]
-match = -28.6%%
-title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+match = -81.0%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.lazada.vn]
 match = -85.7%%
@@ -307,9 +307,9 @@ title = Endrick có giỏi không? - Thể thao
 url = https://znews.vn/endrick-co-gioi-khong-post1485052.html
 
 [baobinhthuan.com.vn]
-match = -133.3%%
-title = Hiểm họa khôn lường từ hành vi tái chế dầu nhớt thải trái ...
-url = https://baobinhthuan.com.vn/hiem-hoa-khon-luong-tu-hanh-vi-tai-che-dau-nhot-thai-trai-phep-120191.html
+match = -119.0%%
+title = Phường Mũi Né: Liên tiếp triệt phá nhiều vụ phạm pháp ...
+url = https://baobinhthuan.com.vn/phuong-mui-ne-lien-tiep-triet-pha-nhieu-vu-pham-phap-hinh-su-va-ma-tuy-120441.html
 
 [thaibinh.gov.vn]
 match = -23.8%%
