--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-18 02:30:39
+lastsearch = 2024-07-18 06:22:13
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -52,9 +52,9 @@ title = 13 Bộ Chăn Ga Gối Đệm Cưới Màu Đỏ Tại Lyly Shop
 url = https://cuahangchangagoidem.com/chan-ga-goi-dem-cuoi-mau-do/
 
 [goni.vn]
-match = 7.1%%
-title = Bộ chăn mền ga gối Goni tici màu xám sữa
-url = https://goni.vn/bo-chan-ga-goi-cotton-tici-goni-mau-xam-sua/
+match = 14.3%%
+title = Bộ chăn mền ga gối Goni tici màu xám
+url = https://goni.vn/bo-chan-ga-goi-cotton-tici-goni-mau-xam/
 
 [ru9.vn]
 match = -25.0%%
