--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-18 03:32:16
+lastsearch = 2024-07-18 06:20:56
 
 [shopee.vn]
 match = -17.4%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
 url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
 
 [www.facebook.com]
-match = 52.2%%
-title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/
+match = -43.5%%
+title = Chiếu Cói Thái Bình,Chiếu Nhựa,Chiếu Trúc cao cấp
+url = https://www.facebook.com/p/Chiếu-Cói-Thái-BìnhChiếu-NhựaChiếu-Trúc-cao-cấp-100046868362224/
 
 [www.sendo.vn]
 match = -69.6%%
@@ -37,9 +37,9 @@ title = Sản xuất theo chiều hướng hiện đại, quy mô lớn
 url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-mo-lon
 
 [www.lazada.vn]
-match = -65.2%%
-title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
-url = https://www.lazada.vn/products/chieu-nhua-thai-binh-chieu-trai-an-com-gap-gon-du-kich-thuoc-i2342474423.html
+match = -17.4%%
+title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
 
 [chuyenhangviet.com]
 match = -73.9%%
