--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-18 05:48:39
+lastsearch = 2024-07-18 06:13:54
 
 [www.everonvn.vn]
-match = 7.4%%
-title = ĐỆM LÒ XO EVERON, KING KOIL
-url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
+match = 31.1%%
+title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 
 [demxanh.com]
-match = 27.9%%
-title = Đệm lò xo 1m6x2m (160x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m6x2m-160x200cm-gia-bao-nhieu.html
+match = 29.8%%
+title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -42,9 +42,9 @@ title = Nệm Lò Xo Everon - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
-match = -270.0%%
-title = Nệm Everon
-url = https://www.everonqb.com/catalog/category/view/s/n-m-everon/id/2013/
+match = 45.7%%
+title = Nệm lò xo Everon Bonnell 180x200x23
+url = https://www.everonqb.com/nem-lo-xo-everon-bonnell-180x200x23.html
 
 [www.diepxuan.com]
 match = 31.1%%
@@ -70,4 +70,9 @@ url = https://tongdailyeveron.com.vn/collections/dem-lo-xo-kingkoil
 match = -6.4%%
 title = kingkoil spray cushion (america) - Korean Pillows & Blankets
 url = https://everonvietnam.com/en/dem-lo-xo-kingkoil-my/
+
+[everonhanquoc.vn]
+match = 33.3%%
+title = Đệm Lò Xo King Koil Công Nghệ Hàng Đầu Tại Mỹ
+url = https://everonhanquoc.vn/1035/dem-lo-xo-king-koil
 
