--- a/images/chieu-truc-den-khong-vien-lson-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 lastopen = 2024-06-07 00:19:36
 
 [search]
-lastsearch = 2024-07-18 05:46:17
+lastsearch = 2024-07-18 06:29:02
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đen không viền lson 18
 url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 
 [chieutrelinhchi.com]
-match = 24.2%%
-title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1m6x1m9
-url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-khong-vien-mau-vang-1m6x1m9-91.html
+match = 21.2%%
+title = Chiếu trúc hạt nhỏ không viền màu nâu đen Size: 1m8x2m
+url = https://chieutrelinhchi.com/chieu-truc-1m8/chieu-truc-hat-nho-khong-vien-mau-nau-1m8x2m-101.html
 
 [demxanh.com]
 match = -9.1%%
@@ -150,4 +150,9 @@ url = https://www.facebook.com/chieuhuongtrucls/?locale=vi_VN
 match = 3.0%%
 title = Chiếu trúc hạt có viền không viền đẹp cao cấp cho giường ...
 url = https://www.lazada.vn/products/chieu-truc-hat-co-vien-khong-vien-dep-cao-cap-cho-giuong-don-1m-1m2-1m4-1m6-1m8-x-2m-gia-re-i1523523975.html
+
+[khonemtonghop.com]
+match = -460.0%%
+title = Chiếu
+url = https://khonemtonghop.com/chieu/
 
