--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-07-18 06:18:01
+lastsearch = 2024-07-18 06:47:12
 
 [everon.com.vn]
 match = 11.1%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Everon EPM 22070
 url = https://everon.com.vn/bo-chan-ga-everon-epm-22070/
 
 [everon.online]
-match = -44.4%%
-title = Bộ Everon EPM22063
-url = https://everon.online/products/bo-everon-epm-22063
+match = -5.0%%
+title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
+url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
 
 [everonhn.com.vn]
 match = 14.8%%
