--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-07-18 04:35:45
+lastsearch = 2024-07-18 06:47:54
 
 [demxanh.com]
 match = -60.9%%
@@ -17,9 +17,9 @@ title = Chiếu trúc tre chiếu cao bằng tây bắc nhiều cỡ đủ size 
 url = https://www.lazada.vn/products/chieu-truc-tre-chieu-cao-bang-tay-bac-nhieu-co-du-size-tam-hoa-i1312559243.html
 
 [shopee.vn]
-match = -65.2%%
-title = Chiếu trúc Cao Bằng Cao Sơn dòng đối mục loại 1 chính ...
-url = https://shopee.vn/Chiếu-trúc-Cao-Bằng-Cao-Sơn-dòng-đối-mục-loại-1-chính-hãng-KT-160-180-200X220cm-i.334752746.9233812040
+match = 43.5%%
+title = Chiếu trúc cao bằng 1.4m x 1.95
+url = https://shopee.vn/Chiếu-trúc-cao-bằng-1.4m-x-1.95-i.79170238.1321077017
 
 [lombom.com]
 match = -60.9%%
@@ -52,9 +52,9 @@ title = Địa chỉ bán chiếu trúc Cao Bằng tại 63 tỉnh thành
 url = https://thegioichieutruc.com/dia-chi-ban-chieu-truc-cao-bang-tai-63-tinh-thanh/
 
 [www.facebook.com]
-match = 13.0%%
-title = Chiếu trúc Bản Ngà - Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieucaobang/
+match = -52.2%%
+title = Chiếu trúc Cao Bằng, Chiếu trúc thanh, Chiếu trúc cây
+url = https://www.facebook.com/chieutrucvietso1/
 
 [chieutruc.info]
 match = -73.9%%
