--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-18 05:32:08
+lastsearch = 2024-07-18 06:47:43
 
 [shopee.vn]
 match = 25.0%%
@@ -97,9 +97,9 @@ title = Hệ thống kinh lạc trong cơ thể
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/he-thong-kinh-lac-trong-co/
 
 [books.google.com]
-match = -231.2%%
-title = 12 Con Giáp Theo Lịch Vạn Niên - Page 182 - Google Books Result
-url = https://books.google.com/books?id=uEr8EAAAQBAJ&pg=PA182&lpg=PA182&dq=chieu+lac+soc+12&source=bl&ots=83sA8jUTRw&sig=ACfU3U1wTW5mlyJLD7mLzJaDSVGIGo8DEQ&hl=en&sa=X&ved=2ahUKEwjH6tfN-K6HAxUNHjQIHXRZBzIQ6AF6BAgnEAM
+match = -150.0%%
+title = Ph_c Truy_n Lu_t L_ Ký (T_p 2: Ph_c Truy_n 12-26)
+url = https://books.google.com/books?id=qpuaDwAAQBAJ&pg=PA338&lpg=PA338&dq=chieu+lac+soc+12&source=bl&ots=oA-t4UO0Ro&sig=ACfU3U2aCy7KrQvtU8XWt_3mYZiZZy9UoA&hl=en&sa=X&ved=2ahUKEwi1m5a1oa-HAxX7MVkFHdFuDXIQ6AF6BAggEAM
 
 [baovinhlong.vn]
 match = -137.5%%
