--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-17 22:17:37
+lastsearch = 2024-07-18 06:48:51
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -42,8 +42,8 @@ title = thảm trải sàn giá tốt Tháng 6, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải sàn
 
 [blanc.vn]
-match = -72.7%%
-title = Thảm trải sàn BLANC' | Thảm lông, thảm dệt 3D ...
+match = -104.5%%
+title = Thảm trải sàn BLANC' | Thảm lông, thảm dệt 3D đổi trả ...
 url = https://blanc.vn/tham-trai-san
 
 [demxanh.com]
