--- a/images/tui-warmdream-2-gap-180x200x12/config.ini
+++ b/images/tui-warmdream-2-gap-180x200x12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-2-gap-180x200x12.html
 lastopen = 2024-06-17 10:42:05
 
 [search]
-lastsearch = 2024-07-18 05:47:33
+lastsearch = 2024-07-18 06:45:43
 
 [www.diepxuan.com]
 match = 6.7%%
@@ -40,4 +40,9 @@ url = https://www.youtube.com/watch?v=kuvfifz7ns4
 match = -25.0%%
 title = Really FRFR | Page 2
 url = https://unofficialwarmoth.com/threads/really-frfr.26533/page-2
+
+[us.amazon.com]
+match = -23.3%%
+title = Amazon.com: Customer Questions & Answers
+url = https://us.amazon.com/ask/questions/Tx13F9FK7X8FIZC/?
 
