CI images update

--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-17 22:38:33
+lastsearch = 2024-07-18 08:04:06
 
 [shopee.vn]
 match = -171.4%%
@@ -33,8 +33,8 @@ url = https://www.mantubung.com/
 
 [www.lazada.vn]
 match = -185.7%%
-title = Man Ngu Tu Bung Giá Tốt T03/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/man-ngu-tu-bung/?innerlink=hot_v1
+title = Mùng /Màn Ngủ Tự Bung METTA - 1M2 x 1M 9 - BH 18 tháng
+url = https://www.lazada.vn/products/mung-man-ngu-tu-bung-metta-1m2-x-1m-9-bh-18-thang-hang-chinh-hang-viet-nam-xuat-khau-i691714886.html
 
 [www.mungbaobao.com]
 match = -214.3%%
@@ -42,9 +42,9 @@ title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 202
 url = https://www.mungbaobao.com/
 
 [www.bible.com]
-match = -171.4%%
-title = TIRHKOHTE 18 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/ACT.18.MIZCLBSI
+match = -142.9%%
+title = THUPUAN 18 | MIZOVBSI Bible | YouVersion
+url = https://www.bible.com/bible/253/REV.18.MIZOVBSI
 
 [mungchup.com]
 match = -164.3%%
