--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-18 05:49:33
+lastsearch = 2024-07-18 08:00:51
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [songhongonline.vn]
 match = 0.0%%
-title = Bộ sản phẩm SH_BC23 084
-url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-084
+title = Bộ sản phẩm SH_BC23 075
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-075
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 20.6%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH016
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh016
+match = 26.5%%
+title = Bộ Chăn Ga Gối Tơ Tằm Cao Cấp HJ03
+url = https://antbedding.com/bo-chan-ga-goi-to-tam-cao-cap-hj03
 
 [shopee.vn]
 match = 50.0%%
