--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-07-18 05:13:37
+lastsearch = 2024-07-18 08:01:56
 
 [www.instagram.com]
 match = -173.3%%
@@ -250,4 +250,9 @@ url = https://www.plantmuseum.com/app6b2Hx/94533.shtml
 match = 61.5%%
 title = Chan Hoi Suen
 url = https://www.ewingchun.com/sifus/chan-hoi-suen
+
+[scholar.google.hr]
+match = 64.3%%
+title = Chan, Hoi Wing
+url = https://scholar.google.hr/citations?user=o9lF5bAAAAAJ&hl=th
 
