--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-18 04:26:19
+lastsearch = 2024-07-18 07:59:34
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
-match = -161.9%%
-title = 20240411 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
-url = https://www.youtube.com/watch?v=GfgBMe1fFZM
+match = -114.3%%
+title = 🇹🇼 Hướng Dẫn Du Lịch Đài Loan 2024 | Tất tần tật 7 ngày ở ...
+url = https://www.youtube.com/watch?v=Ce9gErYj7uY
 
 [roc-taiwan.org]
 match = -66.7%%
