--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-18 03:17:46
+lastsearch = 2024-07-18 08:00:06
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -405,4 +405,9 @@ url = https://mpdc.dc.gov/
 match = 0.0%%
 title = 
 url = https://consumer.sc.gov/HOA-Ed
+
+[www.census.gov]
+match = 5.9%%
+title = U.S. Census Bureau
+url = https://www.census.gov/
 
