--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-18 06:22:00
+lastsearch = 2024-07-18 07:58:28
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title =
 url = https://en.wikipedia.org/wiki/MC_Ren
 
 [books.google.com]
-match = -440.0%%
-title = The Monasteries of the Wadi 'n Natrûn: The history of the ...
-url = https://books.google.com/books?id=_mIPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+ren+16&source=bl&ots=Hlowym28CZ&sig=ACfU3U0B6bSqNPEHy1L2WdecknbwgVU_ow&hl=en&sa=X&ved=2ahUKEwjM9aj8kK-HAxU9N2IAHSTSC9gQ6AF6BAgVEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfkNHoid&sig=ACfU3U0188-vMwf2GMdiQa5lN5P8GbvU9A&hl=en&sa=X&ved=2ahUKEwj-nqOdsa-HAxXYEzQIHXjyBkYQ6AF6BAgnEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
