--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-07-18 06:14:57
+lastsearch = 2024-07-18 08:01:02
 
 [www.diepxuan.com]
 match = -40.0%%
@@ -17,14 +17,14 @@ title = Đệm Lò xo túi Adaptive Tuấn Anh
 url = https://demkhangduy.com/dem-lo-xo-tui-adaptive-tuan-anh
 
 [demxanh.com]
-match = 5.6%%
-title = Đệm lò xo Tuấn Anh
-url = https://demxanh.com/dem-lo-xo-tuan-anh.html
+match = -100.0%%
+title = Đệm lò xo túi Tuấn Anh Adaptive Pocket (Cuộn) dày 25cm
+url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
 
 [tuananh.vn]
 match = 10.0%%
-title = LÒ XO TÚI RUBY POTENCY
-url = https://tuananh.vn/site/Product/446?name=lo-xo-tui-ruby-potency
+title = LÒ XO TÚI RUBY MERRY
+url = https://tuananh.vn/lo-xo-tui-ruby-merry-p445.html
 
 [dem24h.vn]
 match = -35.0%%
