--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-18 08:03:24
+lastsearch = 2024-07-18 09:52:42
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -160.0%%
-title = I went through a series of emotions but 10/10 wow 🤤 @Fruit ...
-url = https://www.tiktok.com/@tatlafata/video/7356429796424895790
+match = -145.0%%
+title = odiar suporte é bom senso 🤬 #minerva #cblol #ilhadaslendas ...
+url = https://www.tiktok.com/@gustavominerva/video/7389861157823204650
 
 [www.imdb.com]
 match = 0.0%%
@@ -252,9 +252,9 @@ title = South Korea May Postpone Crypto Taxation Until 2022
 url = https://decrypt.co/49480/south-korea-may-postpone-crypto-taxation-until-2022
 
 [hu.wikipedia.org]
-match = -5.0%%
-title = I Dzsehun (színművész)
-url = https://hu.wikipedia.org/wiki/I_Dzsehun_(színművész)
+match = -80.0%%
+title = Ellegarden
+url = https://hu.wikipedia.org/wiki/Ellegarden
 
 [www.aoml.noaa.gov]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -160.0%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+match = -115.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [www.vlr.gg]
 match = 5.6%%
