--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-18 03:51:29
+lastsearch = 2024-07-18 09:52:51
 
 [demxanh.com]
 match = -41.2%%
@@ -27,9 +27,9 @@ title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
 url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
 
 [sammas.vn]
-match = -105.9%%
-title = Thảm lì ép Hàn Quốc (M9 hoa xanh) - STHA0002
-url = https://sammas.vn/copy-of-tham-li-ep-han-quoc-stha0001
+match = -111.8%%
+title = Thảm lì ép Hàn Quốc (M2 hoa vàng) - STHA0011
+url = https://sammas.vn/tham-li-ep-han-quoc-stha0011
 
 [shopee.vn]
 match = -200.0%%
