--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-18 09:05:47
+lastsearch = 2024-07-18 09:57:20
 
 [www.instagram.com]
-match = -223.1%%
-title = Yuki Hoi (@hoisoki) • Instagram photos and videos
-url = https://www.instagram.com/hoisoki/?hl=en
+match = -30.8%%
+title = Yuki Chan (@yukichan_la)
+url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
 match = -192.3%%
@@ -22,9 +22,9 @@ title = Hoi Chan draws on scientific illustrations to create 'muted ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
-match = -230.8%%
-title = Twoset Violin - Sight-Reading CURSED Key Signatures
-url = https://www.facebook.com/TwoSetViolin/posts/sight-reading-cursed-key-signatures/2881780741926275/
+match = 33.3%%
+title = Yuk Hoi Chan
+url = https://www.facebook.com/hoihihoi/
 
 [happypaca.tumblr.com]
 match = -276.9%%
