--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-18 09:06:07
+lastsearch = 2024-07-18 09:56:36
 
 [demxanh.com]
 match = 38.2%%
@@ -17,14 +17,14 @@ title = CHIỀU ĐIỀU HOÀ CAO SU NON COCO TẶNG KÈM 2 VỎ ...
 url = https://shopee.vn/CHIỀU-ĐIỀU-HOÀ-CAO-SU-NON-COCO-TẶNG-KÈM-2-VỎ-GỐI-ĐẦU-(-HÀNG-NHẬP-KHẨU-CAO-CẤP-)-i.426167051.25063833023
 
 [foreverbedding.net]
-match = -11.8%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+match = 32.4%%
+title = Chiếu Điều Hoà Cao Su Non Có Chống Thấm Không?
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong
 
 [demchinhhang.com]
-match = 2.9%%
-title = [RẺ NHẤT] Chiều điều hòa cao su non Latex mẫu mới siêu ...
-url = https://demchinhhang.com/collections/chieu-dieu-hoa-cao-su-non
+match = 53.1%%
+title = Chiếu Điều Hoà Băng Lạnh (2 màu)
+url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.facebook.com]
 match = 48.0%%
