--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-18 09:03:40
+lastsearch = 2024-07-18 09:58:02
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -297,9 +297,9 @@ title = The Reinstatement of Covenants, Conditions, and ...
 url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-covenants-conditions-and-restrictions-extinguished-by-the-marketable-record-title-act/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+14&source=bl&ots=2ikuXuw06F&sig=ACfU3U0PNfqYKbRRQXSXBlUF4KMTcjY67A&hl=en&sa=X&ved=2ahUKEwj8nrjx54eHAxXKEVkFHXFTCuIQ6AF6BAgZEAM
+match = -152.9%%
+title = The Monthly Army List - Page 5 - Google Books Result
+url = https://books.google.com/books?id=DrsrAQAAIAAJ&pg=RA1-PA5&lpg=RA1-PA5&dq=man+in+hoa+dep+14&source=bl&ots=2Cer-isg-l&sig=ACfU3U1vPj06zV3NYAZiJz28NLhvWNufDQ&hl=en&sa=X&ved=2ahUKEwi8x5z6y6-HAxU_I0QIHcoMBQkQ6AF6BAgbEAM
 
 [www.house.gov]
 match = 11.8%%
@@ -415,4 +415,9 @@ url = https://www.census.gov/
 match = -176.5%%
 title = Florida bill to require HOAs to provide rules to residents
 url = https://baynews9.com/fl/tampa/news/2024/03/07/homeowners--association-bill-florida-hoa
+
+[www.palmbeachpost.com]
+match = 0.0%%
+title = 
+url = https://www.palmbeachpost.com/story/news/local/2024/07/01/new-florida-hoa-laws-2024-explained-palm-beach-county/74276218007/
 
