--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-18 09:07:02
+lastsearch = 2024-07-18 10:19:40
 
 [shopee.vn]
 match = 2.9%%
@@ -115,4 +115,9 @@ url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
 match = 35.3%%
 title = Chiếu Điều Hoà Cao Su Non Tặng Kèm Gối Cho Bé
 url = https://linhkienlammusic.com/chieu-dieu-hoa-cao-su-non-tang-kem-goi-cho-be
+
+[www.lazada.vn]
+match = -5.9%%
+title = Chiếu điều hòa cao su non 3D, Chiếu điều hoà tặng kèm 2 ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-3d-chieu-dieu-hoa-tang-kem-2-vo-goi-dung-cho-mua-he-thoang-mat-da-nang-i2213525438.html
 
