CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-18 06:13:32
+lastsearch = 2024-07-18 10:43:53
 
 [scholar.google.com]
 match = -43.8%%
@@ -118,8 +118,8 @@ url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
 match = -218.8%%
-title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+18&source=bl&ots=LZu6SUgxRh&sig=ACfU3U3BKYhnecPKOmy3PIzRiA0PgqlZqg&hl=en&sa=X&ved=2ahUKEwi5rKnjma-HAxU3v4kEHYtcCs4Q6AF6BAgaEAM
+title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+18&source=bl&ots=aHabAT6hvb&sig=ACfU3U1MLaT8wp-mSEihoZtSC5svoRnQ0w&hl=en&sa=X&ved=2ahUKEwivpZqa1q-HAxXtl4kEHS_3ApwQ6AF6BAghEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
