--- a/images/nem-dreamland-uc-120x190x09/config.ini
+++ b/images/nem-dreamland-uc-120x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-120x190x09.html
 lastopen = 2024-06-06 16:44:51
 
 [search]
-lastsearch = 2024-07-18 05:20:06
+lastsearch = 2024-07-18 11:19:52
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -27,9 +27,9 @@ title = "Please set $12, $13, $19, and $20"? - Maslow CNC Forums
 url = https://forums.maslowcnc.com/t/please-set-12-13-19-and-20/1707
 
 [www.badmintoncentral.com]
-match = -29.6%%
-title = Racket Recommendation / Comparison | Page 429
-url = https://www.badmintoncentral.com/forums/index.php?forums/racket-recommendation-comparison.155/page-429&order=title&direction=asc
+match = -11.1%%
+title = Li Ning Rackets Fan Club :) | Page 289
+url = http://www.badmintoncentral.com/forums/index.php?threads/li-ning-rackets-fan-club.75225/page-289
 
 [www.canardzone.com]
 match = -47.1%%
@@ -50,4 +50,9 @@ url = https://forum.doom9.org/showthread.php?p=1954279
 match = -81.5%%
 title = Build Log Exclusiv-Modellbau (EMHW) Bellanca Decathlon ...
 url = https://www.flyinggiants.com/forums/showthread.php?t=289733&page=5
+
+[m.facebook.com]
+match = -37.0%%
+title = Guys, I've just purchased a Maslow kit ...
+url = https://m.facebook.com/groups/maslowcnc/permalink/661807767555526/
 
