--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-18 10:46:57
+lastsearch = 2024-07-18 11:18:37
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 26.5%%
-title = Bộ Chăn Ga Gối Tơ Tằm Cao Cấp HJ03
-url = https://antbedding.com/bo-chan-ga-goi-to-tam-cao-cap-hj03
+match = 20.6%%
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH016
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh016
 
 [shopee.vn]
 match = 50.0%%
@@ -103,8 +103,8 @@ url = http://dreamland.vn/Bo-boc-Moder-03-(Ga-chun-chan)-i4155.html
 
 [www.everonqb.com]
 match = 67.7%%
-title = Bộ ga chun chần MC20201 180x200
-url = https://www.everonqb.com/bo-ga-chun-chan-mc20201-180x200.html
+title = Bộ ga chun chần MC20208 180x200
+url = https://www.everonqb.com/bo-ga-chun-chan-mc20208-180x200.html
 
 [changagoidemsonghong.online]
 match = -38.2%%
