--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-18 05:20:16
+lastsearch = 2024-07-18 11:22:30
 
 [demxanh.com]
-match = 25.9%%
-title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
+match = 0.0%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [goni.vn]
 match = 14.8%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
 url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [foreverbedding.net]
-match = -59.3%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+match = 44.4%%
+title = Chiếu điều hòa - Forever Bedding
+url = https://foreverbedding.net/chieu-dieu-hoa
 
 [congtynemthangloi.com]
 match = -29.6%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [kyoryo.vn]
-match = -40.7%%
-title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyoryo
-url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
+match = 18.5%%
+title = Chiếu (Ga) Điều Hòa Viscose mát - Kyoryo
+url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
 
 [suongtuyet.com]
 match = 18.5%%
@@ -63,8 +63,8 @@ url = https://www.youtube.com/watch?v=ccaTWASdw7I
 
 [sieuthidem.vn]
 match = 22.2%%
-title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+title = Bộ chiếu điều hoà Tencel TC05 - Hà Nội
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc05/
 
 [fptshop.com.vn]
 match = -29.6%%
@@ -95,4 +95,9 @@ url = https://chieutrelinhchi.com/chieu-may-dieu-hoa/51
 match = 60.0%%
 title = Chiếu Điều Hòa Cao Su Non
 url = https://www.facebook.com/groups/753270865357544/
+
+[hikawa.com.vn]
+match = -44.4%%
+title = Điều hòa treo tường HIKAWA 2 chiều 12000 BTU HI- ...
+url = https://hikawa.com.vn/dieu-hoa-treo-tuong-hikawa-2-chieu-12000-btu-hi-nh15m-ho-nh15m-3425104
 
