--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-18 09:40:20
+lastsearch = 2024-07-18 11:15:25
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -17,13 +17,13 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -86.4%%
-title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
+match = -36.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
 url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
-match = -50.0%%
-title = Thảm tròn trải chân giường trong phòng ngủ ...
+match = -104.5%%
+title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
 url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
 
 [ochino.com]
@@ -67,8 +67,8 @@ title = Thảm Trải Sàn - Đồ Trang Trí / Đồ Decor
 url = https://moho.com.vn/collections/tham
 
 [homeoffice.com.vn]
-match = -54.5%%
-title = Hướng Dẫn Tính Kích Thước Giường Ngủ Đúng ...
+match = -90.9%%
+title = Hướng Dẫn Tính Kích Thước Giường Ngủ Đúng Chuẩn & ...
 url = https://homeoffice.com.vn/kich-thuoc-giuong-ngu-dung-tieu-chuan.html
 
 [vn.my-best.com]
@@ -82,8 +82,8 @@ title = Căn hộ cho thuê tại Bras-Panon, Saint-Benoît, Réunion - Airbnb
 url = https://www.airbnb.com.vn/rooms/1104230023148123684
 
 [comehome.com.vn]
-match = -40.9%%
-title = TOP mẫu giường tầng cho bé trai, bé gái ...
+match = -90.9%%
+title = TOP mẫu giường tầng cho bé trai, bé gái ... - Come Home
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [anawood.vn]
