--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-07-18 08:03:58
+lastsearch = 2024-07-18 11:45:26
 
 [dreamland.vn]
 match = -64.0%%
@@ -87,9 +87,9 @@ title = Vintage Doll Unboxing & Review - 1998 Avon Exclusive ...
 url = https://www.youtube.com/watch?v=Rra2SCJqcS0
 
 [www.instagram.com]
-match = -77.8%%
-title = Dreamland
-url = https://www.instagram.com/explore/locations/109169992552829/dreamland/?locale=en_US
+match = -122.2%%
+title = Instagram
+url = https://www.instagram.com/dl_washington/reel/C9REistMOJz/
 
 [m.youtube.com]
 match = 0.0%%
