--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-18 11:35:01
+lastsearch = 2024-07-18 11:49:05
 
 [chieutruc.info]
-match = -100.0%%
-title = Bảng giá chiếu cói Xuân Hòa xuất khẩu - hàng Việt Nam cao ...
-url = https://chieutruc.info/chieu-coi-xuan-hoa/
+match = -63.6%%
+title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
+url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
 
 [tiki.vn]
 match = -36.4%%
@@ -22,9 +22,9 @@ title = CAPCUT VIỆT NAM | Mn ơi giúp e vs
 url = https://m.facebook.com/groups/400243538122762/posts/989653909181719/
 
 [nhathuoclongchau.com.vn]
-match = -90.9%%
-title = Cách nhìn hình siêu âm làm sao biết trai hay gái chính xác
-url = https://nhathuoclongchau.com.vn/bai-viet/cach-nhin-hinh-sieu-am-lam-sao-biet-trai-hay-gai-chinh-xac-nhat-70617.html
+match = -104.5%%
+title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt?
+url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
 
 [www.vinmec.com]
 match = -18.2%%
@@ -37,9 +37,9 @@ title = 🔴 Trực Tiếp | U18 Việt Nam - U18 Thái Lan | Việt Nam Khẳng
 url = https://www.youtube.com/watch?v=uPDPr__M7aI
 
 [www.facebook.com]
-match = 45.5%%
-title = Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
+match = 40.9%%
+title = Chiếu Cói Cao Cấp Nga Sơn
+url = https://www.facebook.com/chieucoiviettrang/
 
 [medlatec.vn]
 match = -50.0%%
