--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-18 11:23:54
+lastsearch = 2024-07-18 11:49:49
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -156.2%%
-title = Gloss for life - #beautytok - #hudabeauty - #lip
-url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
+match = -6.2%%
+title = Dvorak Genshin Bpc
+url = https://www.tiktok.com/discover/dvorak-genshin-bpc?lang=en
 
 [www.diepxuan.com]
 match = -150.0%%
@@ -112,9 +112,9 @@ title = zury sis synthetic natural dream weave ocean wave 18-36 ...
 url = https://www.amazon.com/SYNTHETIC-NATURAL-DREAM-WEAVE-OCEAN/dp/B0812BHZ5Q
 
 [curlygurlluv.com]
-match = -87.5%%
-title = ZURY NATURAL DREAM BUNDLES - OCEAN WAVE 18
-url = https://curlygurlluv.com/products/natural-dream-ocean-wave-18
+match = -68.8%%
+title = ZURY NATURAL DREAM BUNDLE- DEEP WAVE 18
+url = https://curlygurlluv.com/products/natural-dream-deep-wave-18
 
 [www.sephora.com]
 match = 0.0%%
@@ -152,9 +152,9 @@ title = Personal Color🖍️ | Bộ sưu tập do Annie🥦 đăng
 url = https://www.lemon8-app.com/an_nie/7208139846819316225?region=vn
 
 [globalmaxhosting.com]
-match = -218.8%%
-title = uk company employing staff overseas - globalmaxhosting.com
-url = https://globalmaxhosting.com/blogs/ekeaaxcl-76/
+match = -212.5%%
+title = multiple return in python - bolsa pequena da louis vuitton
+url = https://globalmaxhosting.com/blogs/tyonogkq-277//
 
 [m.aquaserviecuador.com]
 match = -125.0%%
