--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-18 05:35:47
+lastsearch = 2024-07-18 11:52:09
 
 [gobearcats.com]
 match = -142.1%%
@@ -77,8 +77,8 @@ title = Nash Howe (@nash.howe) • Instagram photos and videos
 url = https://www.instagram.com/nash.howe/?hl=en
 
 [medboard.nv.gov]
-match = -100.0%%
-title = Disciplinary Actions - Medical Examiners Board
+match = -121.1%%
+title = Disciplinary Actions - Board of Medical Examiners
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.facesofsuicide.com]
@@ -252,9 +252,9 @@ title = Conference Schedule | C.elegans Development, Cell Biology ...
 url = https://conferences.union.wisc.edu/cedevelopment/program-info/conference-schedule/
 
 [profiles.ucsf.edu]
-match = -7.7%%
-title = Li Zhang, PhD
-url = https://profiles.ucsf.edu/li.zhang
+match = -47.4%%
+title = Arun Wiita, MD, PhD - UCSF Profiles
+url = https://profiles.ucsf.edu/arun.wiita
 
 [profiles.stanford.edu]
 match = -36.8%%
