CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-18 10:46:35
+lastsearch = 2024-07-18 12:15:08
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
 url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
-match = -81.2%%
-title = TIN TÔN GIÁO, CHIỀU THỨ HAI 15/07/2024
-url = https://www.youtube.com/watch?v=CW1lWW6yhOQ
+match = -106.2%%
+title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
+url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
 match = -225.0%%
