--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-18 11:45:57
+lastsearch = 2024-07-18 12:13:10
 
 [demxanh.com]
 match = -41.2%%
@@ -12,9 +12,9 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [tiki.vn]
-match = -117.6%%
-title = Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html?spid=38118691
+match = -141.2%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 31
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-31-p38118824.html?spid=56906252
 
 [www.lazada.vn]
 match = -135.3%%
@@ -27,9 +27,9 @@ title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
 url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
 
 [sammas.vn]
-match = -164.7%%
-title = Thảm lì ép Hàn Quốc (M3 hoạ tiết xám trắng) - STHA0001
-url = https://sammas.vn/tham-li-ep-han-quoc-stha0001
+match = -105.9%%
+title = Thảm lì ép Hàn Quốc (M9 hoa xanh) - STHA0002
+url = https://sammas.vn/copy-of-tham-li-ep-han-quoc-stha0001
 
 [shopee.vn]
 match = -200.0%%
