CI images update

--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-18 11:18:14
+lastsearch = 2024-07-18 12:46:46
 
 [shopee.vn]
 match = -162.5%%
@@ -12,14 +12,14 @@ title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ..
 url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
 
 [www.instagram.com]
-match = -162.5%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -156.2%%
+title = Rua-chan (@rua_kouhai) • Instagram photos and videos
+url = https://www.instagram.com/rua_kouhai/?hl=en
 
 [vi.wikipedia.org]
-match = -75.0%%
-title = Rùa Hoàn Kiếm – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Rùa_Hoàn_Kiếm
+match = 0.0%%
+title = Rùa khổng lồ
+url = https://vi.wikipedia.org/wiki/Rùa_khổng_lồ
 
 [tuongdamynghe.com]
 match = 6.2%%
@@ -52,9 +52,9 @@ title = HSU YING-HUI TO
 url = https://www.cia.gov/readingroom/docs/CIA-RDP84-00581R000100220008-5.pdf
 
 [avibase.bsc-eoc.org]
-match = -143.8%%
-title = Bird Checklists of the World - Mae Chan - Avibase
-url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH03crmc
+match = -275.0%%
+title = Phu Rua National Park bird checklist - Avibase - Bird Checklists of ...
+url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH04le03
 
 [partner.goodsmile.info]
 match = 6.2%%
@@ -129,7 +129,7 @@ url = https://www.nitrc.org/links/?group_id=51&url=https://8537269.xn----7sbbhde
 [www.accuweather.com]
 match = -100.0%%
 title = Browse For Your Weather Location | ...
-url = https://www.accuweather.com/en/browse-locations/asi/TH/64
+url = https://www.accuweather.com/en/browse-locations/asi/th/93
 
 [baophapluat.vn]
 match = -75.0%%
@@ -210,4 +210,9 @@ url = https://www.nichieiasia.com/mai-rua-co-tac-dung-gi-tai-sao-dan-ong-nen-an-
 match = 6.2%%
 title = Chăn cừu mai rùa - Điệp Xuân
 url = https://www.diepxuan.com/chan-cuu-mai-rua.html
+
+[www.makemytrip.com]
+match = -37.5%%
+title = Thailand City List Index page
+url = https://www.makemytrip.com/hotels-international/en-ae/thailand-city-list.html
 
