--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-18 10:17:42
+lastsearch = 2024-07-18 12:45:59
 
 [www.diepxuan.com]
-match = 35.7%%
-title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
+match = 42.9%%
+title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
-match = 3.6%%
-title = CHIẾU NHỰA ĂN CƠM 4M chiếu nhựa 2 mâm siêu đẹp
-url = https://shopee.vn/CHIẾU-NHỰA-ĂN-CƠM-4M-chiếu-nhựa-2-mâm-siêu-đẹp-TTTM-Tuấn-Bình-i.292600121.12379642366
+match = 32.1%%
+title = chiếu nhựa gấp gọn Thái Bình tiện dụng
+url = https://shopee.vn/chiếu-nhựa-gấp-gọn-Thái-Bình-tiện-dụng-i.114438421.3932155248
 
 [tiki.vn]
 match = -21.4%%
