--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-18 11:38:29
+lastsearch = 2024-07-18 12:44:40
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -362,9 +362,9 @@ title =
 url = https://www.dictionary.com/e/slang/gummy-bear-song/
 
 [eur-lex.europa.eu]
-match = -269.2%%
-title = EUROPA-PARLAMENTET SESSIONEN 2016-2017 Fuldstændigt ...
-url = https://eur-lex.europa.eu/legal-content/DA/TXT/PDF/?uri=OJ:C_202402547
+match = -238.5%%
+title = 12020W/TXT - EUR-Lex.europa.eu. - European Union
+url = https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=celex:12020W/TXT
 
 [www.google.com]
 match = 0.0%%
